# phynalysis

./: README.md  setup.cfg
.github/workflows/: tests.yml
phynalysis/: __init__.py  ancestor.py  ancestors.py  beast.py  configs.py  consensus.py  haplotypes.py  mutations.py  parsers.py  transform.py  trees.py  utils.py
phynalysis/cli/: __init__.py  aggregate.py  ancestors.py  args.py  compute_ancestors.py  compute_consensus.py  consensus.py  convert.py  filter.py  generate_nexus.py  generate_phylip.py  generate_population_phylip.py  haplotypes.py  main.py  population_phylip.py  rescale.py  sample.py  take.py  transform.py  utils.py
phynalysis/cli/beast_xml/: __init__.py  insert_data.py  insert_tree.py
phynalysis/configs/: __init__.py  beast_job.py  samplers.py  utils.py  virolution_job.py  virolution_settings.py
phynalysis/export/: __init__.py  fasta.py  formatter.py  nexus.py  npy.py  phylip.py  utils.py  xml.py
phynalysis/remote/: __init__.py  client.py
tests/: test_cli.py  test_configs.py  test_transform.py  test_utils.py
tests/data/: barcodes.csv  haplotypes.csv  out.fasta  out.nex  ref.fasta  sample_200_1.haplotypes.csv  sample_200_2.haplotypes.csv  samples.haplotypes.csv
workflows/pacbio/: Snakefile  config.yaml
