[metadata]
name = phynalysis
version = 0.0.1
description = Collection of tools for data analysis
long_description = file: README.md, LICENSE.md
long_description_content_type = text/markdown
url = https://github.com/sirno/phynalysis
license = MIT

[options]
packages = find:
install_requires =
    pysam
    numpy
    pandas
    tqdm
    biopython
    pyyaml
    paramiko
    scp
    rich
    serious_serializers

[options.extras_require]
beast =
    seaborn
    mcmc_diagnostics
    networkx
dev =
    pytest
    black
    tox

[options.entry_points]
console_scripts =
    phyn = phynalysis.cli.main:main
    phyn-generate-population-phylip = phynalysis.cli.generate_population_phylip:entry

[tox:tox]
envlist =
    py310
isolated_build = True

[testenv]
deps =
    pytest
commands = pytest tests {posargs}
